# Octree-Based-Simulation-Framework-in-C-23

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/oktal/data/: GridVector.hpp
include/oktal/geometry/: Box.hpp  PeriodicBox.hpp  Vec.hpp
include/oktal/io/: VtkExport.hpp
include/oktal/lbm/: D3Q19.hpp  LbmKernels.hpp  TaylorGreen.hpp
include/oktal/octree/: CellGrid.hpp  CellOctree.hpp  MortonIndex.hpp  OctreeGeometry.hpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  poisson.cpp  tgv.cpp
src/geometry/: PeriodicBox.cpp
src/io/: CMakeLists.txt  VtkExport.cpp
src/octree/: CMakeLists.txt  CellGrid.cpp  CellOctree.cpp  MortonIndex.cpp
tests/: CMakeLists.txt
tests/task2/: TestBox.cpp  TestMortonIndex.cpp  TestVec.cpp
tests/task3/: CMakeLists.txt  TestNodesStream.cpp  TestVtkExport.cpp
tests/task4/: TestOctreeIterators.cpp
tests/task5/: CMakeLists.txt  TestCellGrid.cpp  TestPoisson.cmake  TestUtilities.cpp
tests/task6/: CMakeLists.txt  TestGridVector.cpp  TestVtkExportExtensions.cpp
tests/task7/: CMakeLists.txt  TestBasicLbmKernels.cpp  TestBasicLbmKernelsData.h5  TestTgv.cmake
